--- a/erpnext_customization/public/css/website.css
+++ b/erpnext_customization/public/css/website.css
@@ -12,3 +12,14 @@
   max-width: 1000px;
   margin: auto;
 }
+.carousel-control .fa {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 5;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-top: -10px;
+  margin-left: -10px;
+}
