--- a/erpnext_customization/templates/web.html
+++ b/erpnext_customization/templates/web.html
@@ -13,7 +13,7 @@
 				<div class="{% if show_sidebar %}page-content with-sidebar col-sm-9{% else %} page-content col-sm-12 {% endif %}">
 					<div class="page-content-wrapper">
 						<div class="row page-head">
-							<div class="col-sm-8 col-xs-6">
+							<div class='col-sm-12'>
 								{% if not no_breadcrumbs and parents %}
 								<div class="page-breadcrumbs">
 									{% block breadcrumbs %}
@@ -21,6 +21,8 @@
 									{% endblock %}
 								</div>
 								{% endif %}
+							</div>
+							<div class="col-sm-8 col-xs-6">
 								{% block header %}{% endblock %}
 							</div>
 							<div class="col-sm-4 col-xs-6">
