--- a/erpnext_customization/templates/web.html
+++ b/erpnext_customization/templates/web.html
@@ -14,7 +14,7 @@
 			<div class="page-content-wrapper">
 				<div class="row page-head">
 					<div class='col-sm-12'>
-						{% if not no_breadcrumbs and parents %}
+						{% if not no_breadcrumbs and parent_groups %}
 						<div class="page-breadcrumbs">
 							{% block breadcrumbs %}
 							{% include 'templates/includes/breadcrumbs.html' %}
