--- a/erpnext_customization/templates/includes/breadcrumbs.html
+++ b/erpnext_customization/templates/includes/breadcrumbs.html
@@ -1,18 +1,10 @@
-{% if parent_groups and parent_groups|length > 0 %}
-<ul class="breadcrumb">
-	{#
-	<!--<li>-->
-		<!--<span class="fa fa-angle-left"></span>-->
-		<!--<a href="{{ url_prefix }}{{ parents[-1].route | abs_url }}">-->
-		<!--{{ _(parents[-1].title) or _(parents[-1].label) or "" }}</a>-->
-	<!--</li>-->
-	#}
-	<li><a href="/">{{ _("Home") }}</a></li>
-	{% for parent in parent_groups %}
-	{% if parent != parent_groups[-1] %}
-		<li><a href="{{ parent.route | abs_url }}">{{ parent.name or parent.label or "" }}</a></li>
-	{% endif %}
+{% if parents and parents|length > 0 %}
+<ul class="breadcrumb" itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
+	<!--{{parents}}-->
+	<!--<li><a href="/">{{ _("Home") }}</a></li>-->
+	{% for parent in parents %}
+		<li><a href="{{ parent.route | abs_url }}" itemprop="url"><span itemprop="title">{{ parent.name or parent.label or "" }}</span></a></li>
 	{% endfor %}
-	<li class="active">{{ title or "" }}</li>
+	<li class="active"><span itemprop="title">{{ title or "" }}</span></li>
 </ul>
 {% endif %}
