--- a/erpnext_customization/public/css/website.css
+++ b/erpnext_customization/public/css/website.css
@@ -73,3 +73,17 @@
   padding-top: 0px;
   padding-bottom: 25px;
 }
+.product-image-img {
+	border: 0px;
+	border-radius: 3px;
+}
+.product-item {
+	border: 1px solid #EBEFF2;
+	border-radius: 3px;
+	text-align: center;
+}
+.product-item .number-spinner {
+	width: 140px;
+	margin-top: 10px;
+	margin-bottom: 5px;
+}
