--- a/erpnext_customization/templates/generators/item_group.html
+++ b/erpnext_customization/templates/generators/item_group.html
@@ -49,4 +49,52 @@
 		{% endif %}
 	</div>
 </div>
+<script>
+frappe.ready(function() {
+
+	$(".product-item").on('click', '.number-spinner button', function () {
+
+		var btn = $(this),
+			input = btn.closest('.number-spinner').find('input'),
+			oldValue = input.val().trim(),
+			newVal = 0;
+
+		if (btn.attr('data-dir') == 'up') {
+			newVal = parseInt(oldValue) + 1;
+		} else if (btn.attr('data-dir') == 'dwn')  {
+			if (parseInt(oldValue) > 1) {
+				newVal = parseInt(oldValue) - 1;
+			}
+			else {
+				newVal = parseInt(oldValue);
+			}
+		}
+		input.val(newVal);
+	});
+
+	$(".item-add-to-cart button").on("click", function() {
+		frappe.provide('erpnext.shopping_cart');
+
+		var btn = $(this),
+			input = btn.closest('.number-spinner').find('input'),
+			oldValue = input.val().trim(),
+			newVal = 0;
+
+		var item_code = input.attr("data-item-code");
+		var newVal = input.val();
+
+		erpnext.shopping_cart.update_cart({
+			item_code: item_code,
+			qty: newVal,
+			callback: function(r) {
+				if(!r.exc) {
+
+				}
+			},
+			btn: this,
+		});
+	});
+
+});
+</script>
 {% endblock %}
