Fix display issue when no item price

--- a/erpnext_customization/templates/includes/products_as_grid.html
+++ b/erpnext_customization/templates/includes/products_as_grid.html
@@ -8,8 +8,13 @@
 				<div class="product-text" itemprop="name">{{ item_name }}</div>
 			</div>
 		</a>
-		<div>{{ price_sales_uom }}</div>
-		<div style='font-size: small; margin-bottom: 10px;'>({{ price_stock_uom }} / {{ stock_uom }})</div>
+		{% if price_sales_uom %}
+			<div>{{ price_sales_uom }}</div>
+			<div style='font-size: small; margin-bottom: 10px;'>({{ price_stock_uom }} / {{ stock_uom }})</div>
+		{% else %}
+			<div>&nbsp</div>
+			<div style='font-size: small; margin-bottom: 10px;'>&nbsp</div>
+		{% endif %}
 		{% if in_stock %}
 			<div style='color: green; font-size: small'> <i class='fa fa-check'></i> {{ _("In stock") }}</div>
 		{% else %}
