--- a/erpnext_customization/public/css/website.css
+++ b/erpnext_customization/public/css/website.css
@@ -87,3 +87,9 @@
 	margin-top: 10px;
 	margin-bottom: 5px;
 }
+.fixed-ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 250px;
+}
