--- a/erpnext_customization/templates/includes/navbar/navbar_items.html
+++ b/erpnext_customization/templates/includes/navbar/navbar_items.html
@@ -11,7 +11,7 @@
 	<li class="shopping-cart hidden">
 		<div class="cart-icon">
 			<a class="dropdown-toggle" href="#" data-toggle="dropdown" id="navLogin">
-				<span class="fa fa-shopping-cart fa-2x" style="vertical-align: middle;color:white;"></span>
+				<span class="fa fa-shopping-basket fa-2x" style="vertical-align: middle;color:white;"></span>
 				<span class="badge-wrapper" id="cart-count"></span>
 			</a>
 			<div id="cart-overlay" class="dropdown-menu shopping-cart-menu"></div>
