Add line feed after payment logo

--- a/erpnext_customization/templates/includes/footer/footer.html
+++ b/erpnext_customization/templates/includes/footer/footer.html
@@ -11,7 +11,7 @@
 						{% endfor %}
 					</ul>
 					{% if enabled_checkout %}
-						<img src="/files/logo-payment.png">
+						<div><img src="/files/logo-payment.png"></div><br>
 					{% endif %}
 				</div>
 
