--- a/erpnext_customization/templates/pages/cart.html
+++ b/erpnext_customization/templates/pages/cart.html
@@ -72,7 +72,7 @@
 			<div class="col-sm-6">
 				<span class="h6 text-uppercase">{{ _("Pickup Slot") }}</span>
 				<select id="pickup_slots" class="form-control required">
-				<option value>Sélectionnez un créneau de collecte</option>
+				<option value>{{ _("Pick a slot") }}</option>
 					{% for slot in pickup_slots %}
 						<option value="{{ slot.address_name }}" {% if doc.pickup_slot == slot.name %} selected{% endif %}>{{ slot.name }}</option>
 					{% endfor %}
