--- a/erpnext_customization/templates/includes/products_as_grid.html
+++ b/erpnext_customization/templates/includes/products_as_grid.html
@@ -15,10 +15,12 @@
 			<div>&nbsp</div>
 			<div style='font-size: small; margin-bottom: 10px;'>&nbsp</div>
 		{% endif %}
-		{% if in_stock or not is_stock_item %}
-			<div style='color: green; font-size: small'> <i class='fa fa-check'></i> {{ _("In stock") }}</div>
-		{% else %}
-			<div style='color: red; font-size: small'> <i class='fa fa-close'></i> {{ _("Not in stock") }}</div>
+		{% if show_availability_status %}
+			{% if in_stock or not is_stock_item %}
+				<div style='color: green; font-size: small'> <i class='fa fa-check'></i> {{ _("In stock") }}</div>
+			{% else %}
+				<div style='color: red; font-size: small'> <i class='fa fa-close'></i> {{ _("Not in stock") }}</div>
+			{% endif %}
 		{% endif %}
 		<span style="display: inline-block; visibility:{% if in_stock %}visible{% else %}hidden{% endif %};">
 			<div class="input-group number-spinner">
