--- a/erpnext_customization/templates/pages/order.html
+++ b/erpnext_customization/templates/pages/order.html
@@ -20,7 +20,7 @@
 <div class="row transaction-subheading">
     <div class="col-xs-6">
         <span class="indicator {{ doc.indicator_color or ("blue" if doc.docstatus==1 else "darkgrey") }}">
-            {{ _(doc.get("indicator_title")) or _(doc.get("status")) or _("Submitted") }}
+            {{ _(doc.get("status")) or _(doc.get("indicator_title")) or _("Submitted") }}
         </span>
 	</div>
     <div class="col-xs-6 text-muted text-right small">
@@ -45,7 +45,7 @@
 			{{ doc.contact_display }}
 		{% endif %}
 		</p>
-		<p>Merci pour votre commande, vous pouvez payer en ligne ou lors du retrait des produits.</p>
+		{{ frappe.get_doc("Shopping Cart Settings").order_confirmation }}
 	</div>
     <div class="col-sm-6">
 		{% if enabled_checkout %}
