--- a/erpnext_customization/templates/base.html
+++ b/erpnext_customization/templates/base.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{% block title %} {{ title | striptags }} {% endblock %}</title>
 	<meta name="generator" content="frappe">
-
     {% block favicon %}
 	<link rel="shortcut icon"
 		href="{{ (favicon or "/assets/frappe/images/favicon.png") | abs_url }}"
@@ -16,10 +15,7 @@
 		type="image/x-icon">
     {% endblock %}
 	{%- block head -%}
-		{% if meta_block is defined -%}
-		{{ meta_block }}
-		{%- endif %}
-
+		{% block meta_block %}{% endblock %}
 		{% if head_html is defined -%}
 		{{ head_html or "" }}
 		{%- endif %}
@@ -31,9 +27,7 @@
 		{%- for link in web_include_css %}
 		<link type="text/css" rel="stylesheet" href="{{ link|abs_url }}">
 		{%- endfor -%}
-
 	    {%- block head_include %}{{ head_include or "" }}{% endblock -%}
-
 		{%- block style %}{%- endblock -%}
 	{%- endblock -%}
     <script>
@@ -43,11 +37,13 @@
 			frappe.ready_events.push(fn);
 		}
 		window.dev_server = {{ dev_server }};
+		window.socketio_port = {{ frappe.socketio_port }};
     </script>
 </head>
-<body data-path="{{ path }}">
+{% block body %}
+<body data-path="{{ path | e }}">
 	<div class="main-section">
-		<div>
+		<div class="wrapper">
 			<header>
 			{%- block banner -%}
 				{% include "templates/includes/banner_extension.html" ignore missing %}
@@ -89,8 +85,11 @@
 	<!-- js should be loaded in body! -->
 	<script type="text/javascript"
 		src="/assets/frappe/js/lib/jquery/jquery.min.js"></script>
+	<script src="/assets/frappe/js/lib/socket.io.min.js"></script>
 	<script type="text/javascript"
 		src="/assets/js/frappe-web.min.js"></script>
+	<script type="text/javascript"
+		src="/assets/frappe/js/lib/bootstrap.min.js"></script>
 	{% endblock %}
     {%- if js_globals is defined %}
     <script>
@@ -99,15 +98,12 @@
     {%- endfor -%}
     </script>
     {% endif -%}
-
 	{%- for link in web_include_js %}
 	<script type="text/javascript" src="{{ link|abs_url }}"></script>
 	{%- endfor -%}
-
     {%- block script %}{%- endblock %}
-
 	<!-- csrf_token -->
-
     {%- block body_include %}{{ body_include or "" }}{% endblock -%}
 </body>
+{% endblock %}
 </html>
