--- a/erpnext_customization/templates/generators/item_group.html
+++ b/erpnext_customization/templates/generators/item_group.html
@@ -36,12 +36,12 @@
 		</div>
 		<div class="text-center item-group-nav-buttons">
 			{% if frappe.form_dict.start|int > 0 %}
-			<a class="btn btn-default" href="/{{ pathname }}?start={{ frappe.form_dict.start|int - page_length }}">{{ _("Prev") }}</a>
+			<a class="btn btn-default" href="/{{ pathname }}?start={{ frappe.form_dict.start|int - page_length }}&creneau={{ frappe.form_dict.creneau }}">{{ _("Prev") }}</a>
 			{% endif %}
 			{% if items|length > page_length %}
-			<a class="btn btn-default" href="/{{ pathname }}?start={{ frappe.form_dict.start|int + page_length }}">{{ _("Next") }}</a>
+			<a class="btn btn-default" href="/{{ pathname }}?start={{ frappe.form_dict.start|int + page_length }}&creneau={{ frappe.form_dict.creneau }}">{{ _("Next") }}</a>
 			{% elif frappe.form_dict.start|int > 0 %}
-			<a class="btn btn-default" href="/{{ pathname }}?start=0">{{ _("Début") }}</a>
+			<a class="btn btn-default" href="/{{ pathname }}?start=0&creneau={{ frappe.form_dict.creneau }}">{{ _("Début") }}</a>
 			{% endif %}
 		</div>
 		{% else %}
