--- a/erpnext_customization/templates/base.html
+++ b/erpnext_customization/templates/base.html
@@ -15,7 +15,7 @@
 	{% block favicon %}
 	<link
 		rel="shortcut icon"
-		href="{{ (favicon or "/assets/frappe/images/favicon.png") | abs_url }}"
+		href="{{ (favicon or "/assets/frappe/images/frappe-favicon.svg") | abs_url }}"
 		type="image/x-icon"
 	>
 	{% endblock %}
@@ -31,22 +31,26 @@
 		{{ head_html_page or "" }}
 		{%- endif %}
 
-		{% if theme.theme_url %}
+		{%- if theme.name != 'Standard' -%}
 		<link type="text/css" rel="stylesheet" href="{{ theme.theme_url }}">
-		{% else %}
-		<link type="text/css" rel="stylesheet" href="/assets/css/frappe-web-b4.css">
+		{%- else -%}
+		<link type="text/css" rel="stylesheet" href="/assets/css/frappe-web-b4.css?ver={{ build_version }}">
+		{%- endif -%}
 
 		{%- for link in web_include_css %}
-		<link type="text/css" rel="stylesheet" href="{{ link|abs_url }}">
+		<link type="text/css" rel="stylesheet" href="{{ link|abs_url }}?ver={{ build_version }}">
 		{%- endfor -%}
-		{% endif %}
 	{%- endblock -%}
 
 	{%- block head_include %}
 		{{ head_include or "" }}
 	{% endblock -%}
 
-	{%- block style %}{%- endblock -%}
+	{%- block style %}
+		{% if colocated_css -%}
+			<style>{{ colocated_css }}</style>
+		{%- endif %}
+	{%- endblock -%}
 
 	<script>
 		window.frappe = {};
@@ -56,9 +60,12 @@
 		}
 		window.dev_server = {{ dev_server }};
 		window.socketio_port = {{ (frappe.socketio_port or 'null') }};
-    </script>
+		window.show_language_picker = {{ show_language_picker }};
+		window.is_chat_enabled = {{ chat_enable }};
+	</script>
 </head>
-<body frappe-session-status="{{ 'logged-in' if frappe.session.user != 'Guest' else 'logged-out'}}" data-path="{{ path | e }}" {%- if template and template.endswith('.md') %} frappe-content-type="markdown" {% endif -%}>
+<body frappe-session-status="{{ 'logged-in' if frappe.session.user != 'Guest' else 'logged-out'}}" data-path="{{ path | e }}" {%- if template and template.endswith('.md') %} frappe-content-type="markdown" {%- endif %} class="{{ body_class or ''}}">
+	{% include "public/icons/timeless/symbol-defs.svg" %}
 	{%- block banner -%}
 		{% include "templates/includes/banner_extension.html" ignore missing %}
 
@@ -68,7 +75,13 @@
 	{%- endblock -%}
 
 	{%- block navbar -%}
-		{% include "templates/includes/navbar/navbar.html" %}
+		{{ web_block(
+			navbar_template or 'Standard Navbar',
+			values=_context_dict,
+			add_container=0,
+			add_top_padding=0,
+			add_bottom_padding=0,
+		) }}
 	{%- endblock -%}
 
 	{% block content %}
@@ -76,21 +89,31 @@
 	{% endblock %}
 
 	{%- block footer -%}
-		{% include "templates/includes/footer/footer.html" %}
+		{{ web_block(
+			footer_template or 'Standard Footer',
+			values=_context_dict,
+			add_container=0,
+			add_top_padding=0,
+			add_bottom_padding=0
+		) }}
 	{%- endblock -%}
 
 	{% block base_scripts %}
 	<!-- js should be loaded in body! -->
 	<script type="text/javascript" src="/assets/frappe/js/lib/jquery/jquery.min.js"></script>
-	<script type="text/javascript" src="/assets/js/frappe-web.min.js"></script>
+	<script type="text/javascript" src="/assets/js/frappe-web.min.js?ver={{ build_version }}"></script>
 	<script type="text/javascript" src="/assets/js/bootstrap-4-web.min.js"></script>
 	{% endblock %}
 
 	{%- for link in web_include_js %}
-	<script type="text/javascript" src="{{ link | abs_url }}"></script>
+	<script type="text/javascript" src="{{ link | abs_url }}?ver={{ build_version }}"></script>
 	{%- endfor -%}
 
-	{%- block script %}{%- endblock %}
+	{%- block script %}
+		{% if colocated_js -%}
+			<script>{{ colocated_js }}</script>
+		{%- endif %}
+	{%- endblock %}
 	<!-- csrf_token -->
 	{%- block body_include %}{{ body_include or "" }}{% endblock -%}
 </body>
